--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewpoint" content="width=device-width", initial-scale=1.0">
+  <meta name="viewport" content="width=device-width", initial-scale=1">
 	<title>Tailor-Made Websites | Website Designer & Developer | Hire us
   </title>
   <!-- Meta Description -->
