--- a/privacy.html
+++ b/privacy.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewpoint" content="width=device-width", initial-scale=1.0">
-	<title>Tailor-Made Websites | Website Designer & Developer | Hire us
+  <meta name="viewport" content="width=device-width", initial-scale=1">
+  <title>Tailor-Made Websites | Website Designer & Developer | Hire us
   </title>
   <!-- Meta Description -->
   <meta name="description" content="We specialise in Website Development and design. We build websites using HTML and CSS. Websites built tailor-made to your project.Get a Quote Now. Visit us at http://#######.com">
