--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@
         <hr class="light">
         <h5>Contact</h5>
         <hr class="light">
-        <<p>Email - Tailor-madewebsites@mail.com</p>
+        <p>Email - Tailor-madewebsites@mail.com</p>
         <p>Mobile - 07412 771 031</p>          
       </div>
 
