--- a/service.html
+++ b/service.html
@@ -6,15 +6,15 @@
   <title>Tailor-Made Websites | Website Designer & Developer | Hire us
   </title>
   <!-- Meta Description -->
-  <meta name="description" content="We specialise in Website Development and design. We build websites using HTML and CSS. Websites built tailor-made to your project.Get a Quote Now. Visit us at http://#######.com">
+  <meta name="description" content="We specialise in Website Development and design. We build websites using HTML and CSS. Websites built tailor-made to your project.Get a Quote Now. Visit us at http://tailor-madewebsites.co.uk">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="TITLE OF YOUR POST OR PAGE" />
-  <meta property="og:description" content="DESCRIPTION OF PAGE CONTENT" />
+  <meta property="og:title" content="Tailor Made Websites" />
+  <meta property="og:description" content="We build and develop websites" />
   <meta property="og:image" content="LINK TO THE IMAGE FILE" />
   <meta property="og:url" content="PERMALINK" />
-  <meta property="og:site_name" content="SITE NAME" />
+  <meta property="og:site_name" content="Tailor Made Websites" />
 
   <!-- Meta Description End -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -92,7 +92,7 @@
 
        <div class="carousel-caption">
            <h1 class="display-2">Tailor Made Website for your business</h1>           
-           <a href="contact.html"><button type="button" class="btn btn-primary btn-lg">Contact Us Now</button></a>
+           <a href="contact.html"><button type="button" class="btn-2">Contact Us Now</button></a>
        </div>
     </div>
   
@@ -100,7 +100,7 @@
       <img class="d-block img-fluid" src="img/computer.jpg">
       <div class="carousel-caption">
            <h1 class="display-2">Tailor Made Website to start your project</h1>           
-           <a href="contact.html"><button type="button" class="btn btn-primary btn-lg">Contact Us Now</button></a>    
+           <a href="contact.html"><button type="button" class="btn-2">Contact Us Now</button></a>    
     </div>
     </div>
 
@@ -110,7 +110,7 @@
       <div class="carousel-caption">
            <h1 class="display-2">Do You Need a Tailor Made Website?</h1>
            <h3>If so, tell us about your project</h3>       
-           <a href="contact.html"><button type="button" class="btn btn-primary btn-lg">Contact Us Now</button></a>
+           <a href="contact.html"><button type="button" class="btn-2">Contact Us Now</button></a>
     </div>
     </div>
  
@@ -289,7 +289,7 @@
         <hr class="light">
         <li><a href="about.html">About us</a></li>
         <li><a href="contact.html">Start a Project</a></li>
-        <li><a href="work.html">My Past Work</a></li>
+        <li><a href="work.html">Past Projects</a></li>
         <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>                       
       </div>
       
@@ -308,8 +308,9 @@
         <hr class="light">
         <h5>Contact</h5>
         <hr class="light">
-       <p>Email - Tailor-madewebsites@mail.com</p>
-        <p>Mobile - 07412 771 031</p>
+        <p>Email - <a href="mailto:tailor-madewebsites@mail.com">Tailor-madewebsites@mail.com</a></span></p>         
+        <p><span itemprop="telephone">Mobile - <a href="tel:02087613555">07412 771 031</a></span></p> 
+               
       </div>
 
       <div class="col-md-3">
@@ -324,7 +325,6 @@
     </div>    
   </div>
 
-
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -338,6 +338,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+
   <div class="col-12">
     <hr class="light">   
   
