--- a/privacy.html
+++ b/privacy.html
@@ -28,9 +28,18 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-60KL9PPE15"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-60KL9PPE15');
+</script>
 </head>
 <body>
-
 
 
 
