--- a/cookies.html
+++ b/cookies.html
@@ -3,30 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
-  <title>Tailor-Made Websites | Website Designer & Developer | Hire us
+  <title>Tailor-Made Websites | Web Developer & Designer | Hire us
   </title>
   <!-- Meta Description -->
-  <meta name="description" content="We specialise in Website Development and design. We build websites using HTML and CSS. Websites built tailor-made to your project.Get a Quote Now. Visit us at http://tailor-madewebsites.co.uk">
+  <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Tailor Made Websites" />
   <meta property="og:description" content="We build and develop websites" />
-  <meta property="og:image" content="LINK TO THE IMAGE FILE" />
+  <meta property="og:image" content="img/" />
   <meta property="og:url" content="PERMALINK" />
   <meta property="og:site_name" content="Tailor Made Websites" />
-
   <!-- Meta Description End -->
+
+  <!---Links--->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="canonical" href="http://#######.com/" />
+  <link rel="canonical" href="https://tailor-madewebsites.co.uk/">
+  <link rel="shortcut icon" href="img/fav1.jpg" />
+  <link rel="apple-touch-icon" href="http://example.com/images/apple-touch-icon.png" />
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+ <!----Links End---->
+
+
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
