--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
-  <title>Tailor-Made Websites | Web Developer & Designer | Hire us
-  </title>
+  <title>Tailor-Made Websites UK | Web Developer based in East London | Get a Quote Today</title>
   <!-- Meta Description -->
   <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Tailor Made Websites" />
-  <meta property="og:description" content="We build and develop websites" />
-  <meta property="og:image" content="img/" />
-  <meta property="og:url" content="PERMALINK" />
+  <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
+  <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
+  <meta property="og:url" content="https://tailor-madewebsites.co.uk/" />
   <meta property="og:site_name" content="Tailor Made Websites" />
+  <meta name="twitter:card" content="summary_large_image">  
   <!-- Meta Description End -->
 
   <!---Links--->
@@ -156,7 +156,7 @@
 <div class="container-fluid">
   <div class="row Jumbotron">
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-      <p class="lead">We are a London based website design & development agency, specialising in building websites Tailor Made to your  business concept. We are well equipped to take your business concept from initial idea to reality as we believe anything is possible with the right website to engage visitors. Whether you're about to create a website for the first time or you're a long time pro, we've got you covered.
+      <p class="lead">We are a London based website design & development agency, specialising in building websites Tailor Made to your business concept. We are well equipped to take your intial idea and bring it to reality as we believe anything is possible with the right website to engage visitors. Whether you're about to create a website for the first time or you're a long time pro, we've got you covered.
 
       </p>
   </div>
@@ -179,7 +179,7 @@
     </div>
     <hr>
     <div class="col-12">
-      <p class="lead">We pride ourselves in being extremely professional, sufficient, clear and concise.  We want you to feel comfortable knowing that we will do our best to provide you with the best service possible. We will only take on your project, if we are know that we can fulfil all of your requirements.If for whatever reason (in extreme cases) we are unable to fulfil your requirements, we will not hide it and will be clear and upfront with this as we would rather build long term relationship than to allow you to be unhappy.</p>      
+      <p class="lead">We pride ourselves in being extremely professional, sufficient, clear and concise.  We want you to feel comfortable knowing that we will do our best to provide you with the best service possible. We will only take on your project, if we know that we can fulfil all of your requirements to a high standard. If for whatever reason (in extreme cases) we are unable to fulfil your requirements, we will not hide it from you and will be clear and upfront with this as we would rather build a long term relationship than to allow you to be unhappy.</p>      
     </div>
   </div>  
 </div>
@@ -206,7 +206,7 @@
     <div class="col-sm-12 col-md-4">
       <i class="fas fa-handshake"></i>
       <h3>We design your website</h3>
-      <p>If you are happy to progress, we will send you a Client Care Letter which will detail what we have agreed and once signed and returned we will begin working on your brand new website.</p>
+      <p>If you are happy with the quote and want to progress with us, we will send you a Contract which will detail our Terms and Conditions and what we have agreed uopn. Once signed and returned we will begin working on your brand new website.</p>
     </div>
   </div>
  <hr class="my-4"> 
@@ -222,7 +222,7 @@
   <h2>Why Choose Us</h2>
   <br>
   <p>We are a family run business and therefore we feel that your happiness is the utmost importance.</p>
-  <p>We believe that every project whether it is a small start up or a large and recognised company, you deserve the best.</p>
+  <p>We believe that every project whether it is a small start up or a large and recognised company, you deserve the best service at all times.</p>
   <p>Sometimes less is more especially when you are starting out and therefore we would be open and honest about what we feel your project would require at that time, however as always the final decision would be yours.</p>  
   <p>We want you to have the best website possible, whilst also taking pressure of you to focus on other important aspects of your business/project.</p>
   
@@ -258,7 +258,7 @@
         <img class="card-img-top" src="img/jw3.jpg">
         <div class="card-body">
           <h4 class="card-title">Jermaine Wilson <br><br>Director/Web Developer</h4>
-                  <p class="card-text">I am the Director of Tailor-Made Websites. I established Tailor-Made Websites in 2020 during the lockdown period of the UK. I had been building websites and learning about web development since 2015 as a hobby in my spare time. I made the decision to start Tailor-Made Websites during the lockdown period for my family.</p>
+                  <p class="card-text">I am the Director of Tailor-Made Websites. I established Tailor-Made Websites in 2020 during the lockdown period of the UK. I had been building websites and learning about website development since 2015 as a hobby in my spare time. I made the decision to start Tailor-Made Websites during the lockdown period for my family.</p>
           <a href="about.html" class="btn btn-primary">See Profile</a>
           
         </div>
@@ -272,7 +272,7 @@
         <img class="card-img-top" src="img/kb2.jpg">
         <div class="card-body">
           <h4 class="card-title">Kerrie Bougrine<br><br>Director/Admin</h4>
-          <p class="card-text">I am the partner of Jermaine Wilson. Although I am not a web developer myself, I help to run the business and deal with all sides relating to the Administration. My background is performance arts and therefore in terms of building websites, I help with the design side.</p>
+          <p class="card-text">I am the partner of Jermaine Wilson. Although I am not a web developer myself, I help to run the business and deal with all sides relating to the Administration. I have a cretaive background and therefore in terms of building websites, I provide advice on the layout and the design.</p>
           <a href="about.html" class="btn btn-primary">See Profile</a>
           
         </div>
@@ -293,12 +293,13 @@
   <h2>Our Philosophy</h2>
   <p>Unlike many other web developers and agencies, there are only two of us and therefore attention to detail will be at the forefront of all our designs.</p>
 
-  <p>We will work with you on the project, meaning you will have more control on the project and we can often offer more flexibility.
-When it comes to a budget, we remain flexible and will give you our honest opinion on how much we feel your website would cost to build.</p> 
+  <p>All of our websites are built from stratch, using HTML5, CSS & Javascript. We tend to not use templates from Wix and Wordpress as we feel that having a website tailored to your needs makes you stand out from the crowd.</p>
+
+  <p>We will work with you on the project, meaning you will have control over what is developed so in turn and we can often offer more flexibility. When it comes to a budget, we will give you our honest opinion on how much we feel your website would cost to build.</p> 
 
   <p>We want all parties to be happy before moving forward.</p>
 
-  <p>When it comes to the time frame to have your website built, this depends on numerous factors such as, number of pages, type of features, type of website etc. However once we have spoken we will be able to discuss this with you.</p>
+  <p>When it comes to the time frame to have your website built, this depends on numerous factors such as, number of pages, type of features, type of website etc. However once we have spoken in detail, we will be able to discuss this with you.</p>
 
   <p>We will always aim to give you either weekly or monthly updates dependent on the agreed timeframe set out at the start.</p>
   <br>  
