--- a/index.html
+++ b/index.html
@@ -192,21 +192,21 @@
     <div class="col-xs-12 col-sm-6 col-md-4">
       <i class="fas fa-comments"></i>
       <h3>Tell us about your Project</h3>
-      <p>Simply tell us about your project or business concept by contacting us and completing a simple form.</p>
+      <p>Simply tell us about your project or business concept by contacting us and completing a simple form. Once we have your form and have spoken to you in detail, we move on to the next stage which is to provide you with a quote.</p>
     </div>
   
 
 <div class="col-xs-12 col-sm-6 col-md-4">
       <i class="far fa-file-alt"></i>
       <h3>We give you a Quote</h3>
-      <p>Once we have spoken to you and received your form, we will provide you with an affordable quote.</p>
+      <p>After speaking to you and perused your form, we will provide you with an affordable quote for our services. Any quote given will be dependent on the time frame you are seeking to have your website.</p>
     </div>
     
 
     <div class="col-sm-12 col-md-4">
       <i class="fas fa-handshake"></i>
       <h3>We design your website</h3>
-      <p>If you are happy with the quote and want to progress with us, we will send you a Contract which will detail our Terms and Conditions and what we have agreed uopn. Once signed and returned we will begin working on your brand new website.</p>
+      <p>If you are happy with the quote and time frame proposed, we will send you a Contract which will detail our Terms and Conditions. Once signed and returned we will begin working on your brand new website.</p>
     </div>
   </div>
  <hr class="my-4"> 
