--- a/service.html
+++ b/service.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
-  <title>Tailor-Made Websites | Web Developer & Designer | Hire us
-  </title>
+  <title>Tailor-Made Websites UK | Web Developer based in East London | Get a Quote Today</title>
   <!-- Meta Description -->
   <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Tailor Made Websites" />
-  <meta property="og:description" content="We build and develop websites" />
-  <meta property="og:image" content="img/" />
-  <meta property="og:url" content="PERMALINK" />
+  <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
+  <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
+  <meta property="og:url" content="https://tailor-madewebsites.co.uk/" />
   <meta property="og:site_name" content="Tailor Made Websites" />
+  <meta name="twitter:card" content="summary_large_image">  
   <!-- Meta Description End -->
 
   <!---Links--->
@@ -31,7 +31,6 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
  <!----Links End---->
-
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -232,7 +231,7 @@
 
       <div class="col-sm-5">
         <div class="img-wrap">
-          <img src="img/dom.jpg">          
+          <img src="img/ecom1.jpg">          
         </div>        
       </div>      
     </div>    
