--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
-  <title>Tailor-Made Websites UK | Web Developer based in East London | Get a Quote Today</title>
+  <title>About Us | Tailor-Made Websites UK </title>
   <!-- Meta Description -->
   <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
