--- a/faq.html
+++ b/faq.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
   <title>FAQ | Tailor-Made Websites UK </title>
-  <!-- Meta Description -->
+ <!-- Meta Description -->
   <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="Tailor Made Websites" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="FAQ | Tailor Made Websites UK" />
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
-  <meta property="og:url" content="https://tailor-madewebsites.co.uk/" />
+  <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
   <meta property="og:site_name" content="Tailor Made Websites" />
   <meta name="twitter:card" content="summary_large_image">  
   <!-- Meta Description End -->
