--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
-  <title>Tailor-Made Websites UK | Web Developer based in East London | Get a Quote Today</title>
+  <title>Home | Tailor-Made Websites UK</title>
   <!-- Meta Description -->
   <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="Tailor Made Websites" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Home | Tailor Made Websites UK" />
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
-  <meta property="og:url" content="https://tailor-madewebsites.co.uk/" />
+  <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
   <meta property="og:site_name" content="Tailor Made Websites" />
   <meta name="twitter:card" content="summary_large_image">  
   <!-- Meta Description End -->
@@ -21,7 +21,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="canonical" href="https://tailor-madewebsites.co.uk/">
+  <link rel="canonical" href="https://tailor-madewebsites.co.uk">
   <link rel="shortcut icon" href="img/fav1.jpg" />
   <link rel="apple-touch-icon" href="http://example.com/images/apple-touch-icon.png" />
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
