--- a/service.html
+++ b/service.html
@@ -8,11 +8,11 @@
   <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="Tailor Made Websites" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Services | Tailor Made Websites UK" />
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
-  <meta property="og:url" content="https://tailor-madewebsites.co.uk/" />
+  <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
   <meta property="og:site_name" content="Tailor Made Websites" />
   <meta name="twitter:card" content="summary_large_image">  
   <!-- Meta Description End -->
