--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width", initial-scale=1">
   <title>Services | Tailor-Made Websites UK</title>
   <!-- Meta Description -->
-  <meta name="description" content="Web Development & Design company based in East London | Affordable, Professional & User Friendly Websites built using HTML5, CSS & JAVASCRIPT | Get a Quote Now.">
+  <meta name="description" content="Professional & User Friendly websites built using HTML5, CSS & JAVASCRIPT at Affordable rates.">
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="website" />
@@ -21,7 +21,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="canonical" href="https://tailor-madewebsites.co.uk/">
+  <link rel="canonical" href="https://www.tailor-madewebsites.co.uk/">
   <link rel="shortcut icon" href="img/fav1.jpg" />
   <link rel="apple-touch-icon" href="http://example.com/images/apple-touch-icon.png" />
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
