--- a/cookies.html
+++ b/cookies.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="canonical" href="http://www.tailor-madewebsites.co.uk/">
+  <link rel="canonical" href="http://www.tailor-madewebsites.co.uk/cookies.html">
   <link rel="shortcut icon" href="img/fav1.jpg" />
   <link rel="apple-touch-icon" href="http://example.com/images/apple-touch-icon.png" />
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
