--- a/service.html
+++ b/service.html
@@ -230,7 +230,7 @@
 
       <div class="col-sm-5">
         <div class="img-wrap">
-          <img src="img/ecom.jpg">          
+          <img src="img/ecom.jpg" alt="laptop">          
         </div>        
       </div>      
     </div>    
