--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1">
-  <title>About Us | Tailor-Made Websites UK </title>
+  <title>About us | Tailor-Made Websites UK </title>
  <!-- Meta Description -->
  <meta name="description" content="Professional & User Friendly websites built using HTML5, CSS & JAVASCRIPT at Affordable rates.">
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="About Us | Tailor Made Websites UK" />
+  <meta property="og:title" content="About us | London Based Web Developer | Tailor Made Websites"/>
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
   <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
