--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Professional & User Friendly websites built using HTML5, CSS & JAVASCRIPT at Affordable rates.">
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Home | Tailor Made Websites UK" />
+  <meta property="og:title" content="Web Development Services | London Based Web Developer| Tailor Made Website" />
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
   <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
@@ -29,6 +29,7 @@
  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+ <script src="js/main.js"></script>
  <!----Links End---->
 
 
