--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
   <meta name=”robots” content=”noindex, nofollow”>
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Privacy | Tailor Made Websites UK" />
+  <meta property="og:title" content="Privacy | London Based Web Developer| Tailor Made Websites" />
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
   <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
