--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Professional & User Friendly websites built using HTML5, CSS & JAVASCRIPT at Affordable rates.">
   <meta name=”robots” content=”index, follow”> 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Services | Tailor Made Websites UK" />
+  <meta property="og:title" content="Services | London Based Web Developer | Tailor Made Websites" />
   <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
   <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
   <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
