--- a/index.html
+++ b/index.html
@@ -167,19 +167,15 @@
  <!-----------------------------Jumbotron---------------------------------------->
    
 
-<div class="container-fluid">
-  <div class="row Jumbotron">
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+
+<div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12">
       <p class="lead">We are a London based website design & development agency, specialising in building websites Tailor Made to your business concept. We are well equipped to take your intial idea and bring it to reality as we believe anything is possible with the right website to engage visitors. Whether you're about to create a website for the first time or you're a long time pro, we've got you covered.
 
       </p>
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-<a href="contact.html"><button type="button" class="btn btn-primary btn-lg">Tell us about your project</button></a>
-  
-</a>    
-  </div>
-  </div>  
+   </div>  
 </div>
 
 
@@ -241,7 +237,7 @@
   <p>We want you to have the best website possible, whilst also taking pressure of you to focus on other important aspects of your business/project.</p>
   
   <br>
-  <a href="contact.html" class="btn btn-primary">Contact us</a>
+  
 </div>    
 
 <div class="col-lg-6">
