--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ function closeNav() {
 
 <div class="row">
   <div class="campus-col">
-    <img src="img/treelance.jpg"> 
+    <img src="img/Treelance.jpg"> 
    
     <div class="layer">
       <h3>Treelance</h3>
