--- a/terms.html
+++ b/terms.html
@@ -100,7 +100,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="img/logo-light.svg" width="74" height="24" alt="Adex home">
+            <img src="img/TMW3.png" width="74" height="24" alt="Adex home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -135,9 +135,9 @@
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+          <a href="mailto:info@tailor-madewebsites.co.uk" class="contact-link">info@tailor-madewebsites.co.uk</a>
 
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+          <a href="tel:07412 771 031" class="contact-link">07412 771 031</a>
         </div>
 
         <ul class="social-list">
