--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Tailor-Made Websites UK </title>
+  <title>Privacy</title>
   <meta name="title" content="Tailor-Made Websites UK">
   <meta name="description" content="This is a business agency html template made by codewithsadee">
 
@@ -90,7 +90,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         <img src="img/TMW3.png" width="150" height="100" alt="Adex home" class="logo-light">
 
         <img src="img/TMW3.png" width="150" height="100" alt="Adex home" class="logo-dark">
@@ -130,6 +130,10 @@
             <a href="index.html" class="navbar-link">Past projects</a>
           </li>
 
+          <li>
+            <a href="freelancer.html" class="navbar-link">Are you a Freelancer?</a>
+          </li>
+
           
 
         </ul>
@@ -143,25 +147,19 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
+            <a href="http://www.facebook.com/Tailor-Made-Website-106542214661330/" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-dribbble"></ion-icon>
+            <a href="https://www.twitter.com/made_websites" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/tailor_made_websites" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -176,7 +174,7 @@
 
       </nav>
 
-      <a href="#footer" class="btn btn-primary">Contact us</a>
+      <a href="contact.html" class="btn btn-primary">Contact us</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -228,7 +226,7 @@
                 <li class="slider-item">
 
                   <figure class="img-holder" style="--width: 575; --height: 550;">
-                    <img src="img/jew4.jpg" width="575" height="550" alt="" class="img-cover">
+                    <img src="img/computer.jpg" width="575" height="550" alt="" class="img-cover">
                   </figure>
 
                 </li>
@@ -525,12 +523,12 @@
 
       <div class="footer-brand">
 
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img src="img/TMW3.png" width="150" height="100" alt="Adex home">
         </a>
 
         <p class="footer-text">
-          &copy; 2022 Tailor Made Websites is a trading name of JEWilson Ltd. <br> All rights reserved.
+          &copy; 2022 Tailor Made Websites is a trading name of JEWilson Ltd. Registered in England and Wales (No 14455192) <br> All rights reserved.
         </p>
 
         <ul class="social-list">
