--- a/terms.html
+++ b/terms.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Tailor-Made Websites UK </title>
+  <title>T&C's</title>
   <meta name="title" content="Tailor-Made Websites UK">
   <meta name="description" content="This is a business agency html template made by codewithsadee">
 
@@ -99,7 +99,7 @@
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img src="img/TMW3.png" width="74" height="24" alt="Adex home">
           </a>
 
@@ -130,9 +130,11 @@
             <a href="index.html" class="navbar-link">Past projects</a>
           </li>
 
-          
+          <li>
+            <a href="freelancer.html" class="navbar-link">Are you a Freelancer?</a>
+          </li>
 
-        </ul>
+          </ul>
 
         <div class="wrapper">
           <a href="mailto:info@tailor-madewebsites.co.uk" class="contact-link">info@tailor-madewebsites.co.uk</a>
@@ -143,25 +145,19 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
+            <a href="http://www.facebook.com/Tailor-Made-Website-106542214661330/" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-dribbble"></ion-icon>
+            <a href="https://www.twitter.com/made_websites" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/tailor_made_websites" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -176,7 +172,7 @@
 
       </nav>
 
-      <a href="#footer" class="btn btn-primary">Contact us</a>
+      <a href="contact.html" class="btn btn-primary">Contact us</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -204,10 +200,10 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Tailor Made Websites specifically built to suit all your needs.</h1>
+            <h1 class="h1 hero-title">Terms & Conditions.</h1>
 
             <p class="hero-text">
-              We’re a creative company that focuses on establishing long-term relationships with our clients & customers.
+              Below are our terms and conditions. 
             </p>
 
             <div class="btn-wrapper">
@@ -228,7 +224,7 @@
                 <li class="slider-item">
 
                   <figure class="img-holder" style="--width: 575; --height: 550;">
-                    <img src="img/jew4.jpg" width="575" height="550" alt="" class="img-cover">
+                    <img src="img/terms.jpg" width="575" height="550" alt="" class="img-cover">
                   </figure>
 
                 </li>
@@ -237,7 +233,7 @@
 
                   <div class="hero-card">
                     <figure class="img-holder" style="--width: 575; --height: 550;">
-                      <img src="img/about.jpg" width="575" height="550" alt="hero banner"
+                      <img src="img/hands.jpg" width="575" height="550" alt="hero banner"
                         class="img-cover">
                     </figure>
 
@@ -465,7 +461,7 @@
         </a>
 
         <p class="footer-text">
-          &copy; 2022 Tailor Made Websites is a trading name of JEWilson Ltd. <br> All rights reserved.
+          &copy; 2022 Tailor Made Websites is a trading name of JEWilson Ltd. Registered in England and Wales (No 14455192) <br> All rights reserved.
         </p>
 
         <ul class="social-list">
