--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
   -->
   <title>Tailor-Made Websites UK </title>
   <meta name="title" content="Tailor-Made Websites UK">
-  <meta name="description" content="This is a business agency html template made by codewithsadee">
+  <meta name= "description" content= "Web & App Development Company">
+  <meta name="robots" content= "index, follow"> 
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Web & App Development Services | London Based | Tailor Made Website">
+  <meta property="og:description" content="Websites built Tailor Made to your business">
+  <meta property="og:image" content="https://tailor-madewebsites.co.uk/">
+  <meta property="og:url" content="https://tailor-madewebsites.co.uk">
+  <meta property="og:site_name" content="Tailor Made Websites">
+  <meta name="twitter:card" content="summary_large_image">  
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+
+
+
+
+
 
   <!-- 
     - favicon
